tests/baselines/reference/keyofAndForIn.errors.txt
keyofAndForIn.ts(4,10): error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.
keyofAndForIn.ts(15,10): error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.
keyofAndForIn.ts(26,10): error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.


==== keyofAndForIn.ts (3 errors) ====
    function f1<K extends string, T>(obj: { [P in K]: T }, k: K) {
        const b = k in obj;
        let k1: K;
        for (k1 in obj) {
             ~~
!!! error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.
            let x1 = obj[k1];
        }
        for (let k2 in obj) {
            let x2 = obj[k2];
        }
    }
    
    function f2<T>(obj: { [P in keyof T]: T[P] }, k: keyof T) {
        const b = k in obj;
        let k1: keyof T;
        for (k1 in obj) {
             ~~
!!! error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.
            let x1 = obj[k1];
        }
        for (let k2 in obj) {
            let x2 = obj[k2];
        }
    }
    
    function f3<T, K extends keyof T>(obj: { [P in K]: T[P] }, k: K) {
        const b = k in obj;
        let k1: K;
        for (k1 in obj) {
             ~~
!!! error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.
            let x1 = obj[k1];
        }
        for (let k2 in obj) {
            let x2 = obj[k2];
        }
    }